force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__Address__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Address__c</fullName>
    <label>ADDRESS</label>
    <type>TextArea</type>
</CustomField>