force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__CapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CapacityCBM__c</fullName>
    <label>MAX STORAGE CAPACITY(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>