force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__CapacityKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CapacityKG__c</fullName>
    <label>MAX STORAGE CAPACITY(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>