force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__City__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__City__c</fullName>
    <label>CITY(old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__BranchName</valueSetName>
    </valueSet>
</CustomField>