force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__DeliveryTerritory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryTerritory__c</fullName>
    <label>Delivery Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DeliveryTerritory</valueSetName>
    </valueSet>
</CustomField>