force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__Email__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>