force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__FacilityImage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FacilityImage__c</fullName>
    <label>FACILITY IMAGE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>