force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__FacilityName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FacilityName__c</fullName>
    <label>FACILITY NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>