force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__FacilitySubType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FacilitySubType__c</fullName>
    <label>Facility Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__FacilityType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__FacilitySubType</valueSetName>
    </valueSet>
</CustomField>