force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__MobileFacilityID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MobileFacilityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MOBILE FACILITY(TRUCK) ID</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>FAC</relationshipLabel>
    <relationshipName>MobileFacilityID</relationshipName>
    <type>Lookup</type>
</CustomField>