force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__Phone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>