force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__RollUpActualAvailableCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollUpActualAvailableCapacityKG__c</fullName>
    <label>AVAILABLE CAPACITY(KG) INCLUDE PLANNED</label>
    <summarizedField>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__ActualAvailableCapacityKG__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__LocationAreaType__c</field>
        <operation>equals</operation>
        <value>Storage Area</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__LocatorLayer__c</field>
        <operation>equals</operation>
        <value>Floor Layer</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__WarehouseID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>