force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__RollUpMaxWeightKGCapacity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollUpMaxWeightKGCapacity__c</fullName>
    <label>MAX WEIGHT(KG) CAPACITY</label>
    <summarizedField>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__CapacityKG__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__LocationAreaType__c</field>
        <operation>equals</operation>
        <value>Storage Area</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__WarehouseID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>