force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__TemperatureFrom__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TemperatureFrom__c</fullName>
    <label>TEMPERATURE FROM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>