force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__TemperatureTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TemperatureTo__c</fullName>
    <label>TEMPERATURE TO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>