force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__TotalSquareMeter__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalSquareMeter__c</fullName>
    <label>TOTAL SQUARE METER(m2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>