force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__UnitLoad__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnitLoad__c</fullName>
    <label>UNIT LOAD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ChargeType</valueSetName>
    </valueSet>
</CustomField>