force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__WarehoueType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarehoueType__c</fullName>
    <label>WAREHOUSE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__WarehoueType</valueSetName>
    </valueSet>
</CustomField>