force-app/main/default/objects/clofor_com_cfs__Facility__c/fields/clofor_com_cfs__ZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ZipPostalCode__c</fullName>
    <label>Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>