force-app/main/default/objects/clofor_com_cfs__Facility__c/recordTypes/clofor_com_cfs__ClimateControlledWarehouse.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ClimateControlledWarehouse</fullName>
    <active>true</active>
    <label>CLIMATE-CONTROLLED WAREHOUSE</label>
</RecordType>