force-app/main/default/objects/clofor_com_cfs__Facility__c/recordTypes/clofor_com_cfs__NormalWarehouse.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__NormalWarehouse</fullName>
    <active>true</active>
    <description>Normal temperature warehouse</description>
    <label>NORMAL WAREHOUSE</label>
</RecordType>