force-app/main/default/objects/clofor_com_cfs__Facility__c/recordTypes/clofor_com_cfs__PortTerminal.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PortTerminal</fullName>
    <active>true</active>
    <label>Port/Terminal</label>
</RecordType>