force-app/main/default/objects/clofor_com_cfs__Facility__c/recordTypes/clofor_com_cfs__Store.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Store</fullName>
    <active>true</active>
    <label>Store</label>
</RecordType>