force-app/main/default/objects/clofor_com_cfs__Facility__c/recordTypes/clofor_com_cfs__YardICD.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__YardICD</fullName>
    <active>true</active>
    <label>Yard/ICD</label>
</RecordType>