force-app/main/default/objects/clofor_com_cfs__Facility__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__FacExternalID__c</columns>
    <columns>clofor_com_cfs__FacilityName__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__FacilityType__c</columns>
    <columns>clofor_com_cfs__WarehoueType__c</columns>
    <columns>clofor_com_cfs__StorageType__c</columns>
    <columns>clofor_com_cfs__ItemType__c</columns>
    <columns>clofor_com_cfs__TemperatureType__c</columns>
    <columns>clofor_com_cfs__CapacityCBM__c</columns>
    <columns>clofor_com_cfs__CapacityKG__c</columns>
    <columns>clofor_com_cfs__Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>